test/snapshot/negative/profile_conflict/compile.hxml
-cp .
-lib reflaxe.go
-D go_output=out
-D reflaxe_go_profile=portable
-D reflaxe_go_metal
-main Main
